# affelnet-toolbox

./: .env.production  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  (+1 more)
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/data/: affelnet-paris-seuils-admission-lycees-boursiers.json  affelnet-paris-seuils-admission-lycees.json  notes-harmonisees.csv
backend/deploy/: Caddyfile.snippet  affelnet-api.initd  deploy.sh
backend/parser/: fiche_bareme.py  notes_harmonisees.py
backend/services/: notes_store.py  seuils_store.py
backend/tests/: test_fiche_bareme.py  test_notes_harmonisees.py  test_upload.py
backlog/: REQ1-RechercheSecteur.md  REQ10-UploadDocuments.md  REQ11-ParserFicheBareme.md  REQ12-ParserNotesHarmonisees.md  REQ13-ScriptCalculStats.md  REQ14-HeterogeneiteSociale.md  REQ15-TauxCibleBoursiers.md  REQ2-AjoutInfosLycees.md  REQ3-CollegesEnConcurrence.md  REQ3b-CartographieSecteur.md  REQ4-CollegeScolarisation.md  REQ5-AjoutCalculScore.md  REQ6-AjoutHistoScores.md  REQ7-JaugeAdmission.md  REQ8-MessagePreliminaire.md  REQ9-AffichageSourcesDonnees.md  RécupérationEffectifsSeconde.md  affelnet-paris-seuils-admission-lycees.json
data/: effectifs-seconde.json
scripts/: compute_stats.py  fetch-effectifs.ts
src/: App.css  App.tsx  index.css
(+162 files in other folders)
