[project]
name = "affelnet-upload"
version = "0.1.0"
description = "Backend de réception des fiches-barèmes Affelnet (PDF, images, texte)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
]

[project.scripts]
serve = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"

[tool.pytest.ini_options]
pythonpath = ["."]
